Fixed spacing between side bar and projects panel

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,8 @@ body {
   background-color: rgb(28, 27, 27);
   color: aliceblue;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
+  gap: 50px;
 }
 
 .projects-panel {
